--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -127,7 +127,8 @@ javac.classpath=\
     ${file.reference.stax2-api-4.2.2.jar}:\
     ${file.reference.woodstox-core-6.6.2.jar}:\
     ${file.reference.xml-apis-ext-1.3.04.jar}:\
-    ${file.reference.xmlgraphics-commons-2.9.jar}
+    ${file.reference.xmlgraphics-commons-2.9.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -163,7 +164,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Healthcare_N
-main.class=healthcare.n.HealthcareN
+main.class=View.VDashboard
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
