--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Healthcare N
+application.vendor=HP
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Healthcare_N.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Healthcare_N
+endorsed.classpath=
 excludes=
 file.reference.batik-anim-1.17.jar=C:\\Users\\HP\\OneDrive\\Desktop\\Repeat\\EAD\\Main CWs\\EAD CW 01\\netbeansss\\batik-anim-1.17.jar
 file.reference.batik-awt-util-1.17.jar=C:\\Users\\HP\\OneDrive\\Desktop\\Repeat\\EAD\\Main CWs\\EAD CW 01\\netbeansss\\batik-awt-util-1.17.jar
@@ -82,6 +84,7 @@ file.reference.xmlgraphics-commons-2.9.jar=C:\\Users\\HP\\OneDrive\\Desktop\\Rep
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
     ${file.reference.batik-anim-1.17.jar}:\
     ${file.reference.batik-awt-util-1.17.jar}:\
     ${file.reference.batik-bridge-1.17.jar}:\
@@ -127,8 +130,7 @@ javac.classpath=\
     ${file.reference.stax2-api-4.2.2.jar}:\
     ${file.reference.woodstox-core-6.6.2.jar}:\
     ${file.reference.xml-apis-ext-1.3.04.jar}:\
-    ${file.reference.xmlgraphics-commons-2.9.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.xmlgraphics-commons-2.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
